feat: add POST /api/donation/ endpoint first draft
