# src/routes/donations.js
@@ -2,14 +2,17 @@ const router = require('express').Router();
 // const ErrorResponse = require('../utils/errorResponse');
 const { body } = require('express-validator');
 
-const donationController = require('../controllers/donation');
+const donationController = require('../controllers/donations');
 
 router.post(
   '/',
-  body('donation')
+  body('amount')
     .custom((amount) => amount === 10 || amount === 25 || amount === 50)
     .withMessage('Invalid donation amount!'),
   donationController.donateMoney
 );
+
+router.get('/payment/success', donationController.paymentSuccess);
+router.get('/payment/failure', donationController.paymentFailure);
 
 module.exports = router;
