# src/routes/index.js
@@ -4,7 +4,7 @@ const usersRoutes = require('./users');
 const authRoutes = require('./auth');
 const productsRoutes = require('./products');
 const profileRoutes = require('./profile');
-const donationRoutes = require('./donation');
+const donationRoutes = require('./donations');
 
 router.use('/users', usersRoutes);
 router.use('/products', productsRoutes);
